# quicksight-embedding-test

./: .gitignore  LICENSE  README.md  docker-compose.yaml
dashboard/: Dockerfile  config.cfg.example  pyproject.toml
dashboard/dashboard/: __init__.py
dashboard/dashboard/blueprints/: api.py  home.py
dashboard/dashboard/templates/home/: index.html
