[tool.poetry]
name = "quicksight-embedded-dashboard"
version = "0.1.0"
description = "Application designed to test QuickSight dashboard embedding"
authors = ["Viacheslav Bessonov <viacheslav.bessonov@hilbertteam.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
boto3 = "^1.17.52"
pyOpenSSL = "^20.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
